--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,12 @@ body {
 .img-medium {
     height: 200px;
 }
+     .mycontainer {
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: purple;
+                    font-family: sans serif;
+                    padding-top: 60px;
+                  }
+
 
